# paper-experiments

./: .dockerignore  .gitignore  Cargo.toml  schedule.sh
dockerfiles/: autoencoding.Dockerfile  autoencoding_analytics.Dockerfile  base.Dockerfile  srt_transmission.Dockerfile
examples/auto_encoding/: config.rs  main.rs
examples/pool_test/: main.rs
examples/srt_client/: main.rs
examples/srt_server/: main.rs
examples/srt_transmission/: config.rs  main.rs
netem/: bad_network.sh  setup_1.sh  setup_2.sh  setup_3.sh
plots/: .gitignore
scripts/: compress_all.sh  csv_to_latex.py  dump_compress_pipeline.sh  generate_configuration.py  run.sh
scripts/commands/: compress.sh
scripts/correlation_studies/: common.py  delay_times.py  gamewise_processing_jitter.py  idle_times.py  processing_jitter.py  processing_times.py  transmission_times.py
scripts/csv_to_latex/: codec_only.py  transmission.py
scripts/docker/: bash.sh  run_and_upload.sh  run_generic.sh
scripts/dump/: compensate_start_delay.sh  dump_compress_pipeline.sh  generate_comparison.sh  generate_video.sh  tag_timestamp.sh  video_pipeline.sh  vmaf.sh
scripts/experiment/: archive.sh  auto_encoding.sh  batch_run.sh  run.sh  srt_transmission.sh
scripts/key_measures/: codec_only.py  srt_transmission.py  transmission.py
scripts/utils/: avi_to_y4m.sh
src/: buffer_leak_alert.rs  lib.rs  panicker.rs  pipeline_registry.rs  rgba_to_yuv.rs  time_utils.rs  utils.rs  y4m_loader.rs  yuv_to_bgra.rs  yuv_to_rgba.rs
src/common/: capturers.rs  color_converters.rs  decoders.rs  (+5 more)
utils/: env.sh  linux_ffmpeg.rs
(+17 files in other folders)
