[package]
name = "paper-experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.14.0"
features = ["rt-multi-thread"]

[dependencies]
async-trait = "0.1.57"
scrap = "0.5.0"
env_logger = "0.9.0"
log = "0.4.14"
y4m = "0.7.0"
toml = "0.5.9"
serde = "1.0.137"

rayon = "1.5.3"
itertools = "0.10.5"

# remotia = { git = "https://github.com/remotia/remotia", branch = "develop" }
# remotia-ffmpeg-codecs = { git = "https://github.com/remotia/remotia-ffmpeg-codecs", branch = "master" }
# remotia-srt = { git = "https://github.com/remotia/remotia-srt", branch = "master" }

remotia-ffmpeg-codecs = { path = "../remotia-ffmpeg-codecs/" }
remotia-srt = { path = "../remotia-srt/" }
clap = { version = "4.0.15", features = ["derive"] }

[dependencies.remotia]
path = "../remotia/"
features = ["capturers", "buffer_utils", "renderers", "profilation_utils", "codecs", "loggers"]

